# ncp-apps

./: Cargo.toml
docker/: Dockerfile
src/: containers.rs  kopia.rs  lib.rs  main.rs
src/kopia/: exec.rs
src/ncp/: app.rs
