[package]
name = "ncp-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ncp"
path = "src/lib.rs"

[[bin]]
name = "ncp"
path = "src/main.rs"

[[bin]]
name = "containers"
path = "src/bin/containers_test.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
regex = { version = "1.9.6", features = [] }
once_cell = "1.18.0"
bollard = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
termion = "2.0.1"
futures-util = "0.3.28"
